# arcade

./: .gitignore  .pre-commit-config.yaml  README.md  api_client_example.py  async_example.py  db_example.py  example.py  manage.py  persistence_example.py  pyproject.toml  requirements.txt
api/: serializers.py  store_manager.py  urls.py  views.py
kvstore_api/: asgi.py  settings.py  urls.py  wsgi.py
src/kvstore/: __init__.py  async_storage.py  async_store.py  async_transaction.py  exceptions.py  storage.py  store.py  transaction.py
templates/: test_gui.html
tests/: test_api_comprehensive.py  test_async_store.py  test_integration.py  test_persistence.py  test_requirements_example.py  test_rest_api.py  test_store.py
